# Zodaix

./: .gitignore  Cargo.toml  README.md
crates/backends/local/: Cargo.toml
crates/backends/local/src/: local.rs
crates/backends/memory/: Cargo.toml
crates/backends/memory/src/: inode_table.rs  lib.rs  memory.rs
crates/backends/sqlite/: Cargo.toml
crates/backends/sqlite/src/: backend.rs  lib.rs  schema.rs  tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/cli/src/commands/: mod.rs  mount.rs  search.rs  status.rs  tag.rs  unmount.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  registry.rs  types.rs  vfs.rs
crates/fuse/: Cargo.toml
crates/fuse/src/: bridge.rs  lib.rs  reply.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: index.rs  lib.rs  tags.rs
crates/nfs/: Cargo.toml
crates/nfs/src/: bridge.rs  convert.rs  lib.rs
