[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/backends/memory",
    "crates/backends/local",
    "crates/backends/sqlite",
    "crates/metadata",
    "crates/fuse",
    "crates/nfs",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/yongjunkim/Zodaix"

[workspace.dependencies]
# Internal crates
zodaix-core = { path = "crates/core" }
zodaix-memory = { path = "crates/backends/memory" }
zodaix-local = { path = "crates/backends/local" }
zodaix-metadata = { path = "crates/metadata" }
zodaix-fuse = { path = "crates/fuse" }
zodaix-nfs = { path = "crates/nfs" }
zodaix-sqlite = { path = "crates/backends/sqlite" }

# FUSE
fuser = "0.17"

# NFS
nfs3_server = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Concurrency
dashmap = "6"
parking_lot = "0.12"

# Bitflags
bitflags = "2"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Search
tantivy = "0.22"

# Platform
libc = "0.2"
nix = { version = "0.29", features = ["fs", "user"] }
xattr = "1"
filetime = "0.2"

# Config
toml = "0.8"
dirs = "6"

# Signal handling
ctrlc = "3"
