[package]
name = "zodaix"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Zodaix virtual filesystem"

[[bin]]
name = "zodaix"
path = "src/main.rs"

[dependencies]
zodaix-core = { workspace = true }
zodaix-memory = { workspace = true }
zodaix-local = { workspace = true }
zodaix-sqlite = { workspace = true }
zodaix-metadata = { workspace = true }
zodaix-fuse = { workspace = true }
zodaix-nfs = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
dirs = { workspace = true }
fuser = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
xattr = { workspace = true }
libc = { workspace = true }
