[package]
name = "zodaix-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Extended metadata, tags, and search index for Zodaix"

[dependencies]
zodaix-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tantivy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
