[package]
name = "zodaix-nfs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NFSv3 transport bridge for Zodaix VFS"

[dependencies]
zodaix-core = { workspace = true }
nfs3_server = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
