[package]
name = "zodaix-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-memory VFS backend for Zodaix"

[dependencies]
zodaix-core = { workspace = true }
dashmap = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
